--- a/example.html
+++ b/example.html
@@ -3,13 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <link href="./reset.css" type="text/css" rel="stylesheet"> -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.2/lottie.min.js"></script> -->
-    <script src="lottie.js" type="text/javascript"></script>
-    <script src="./lottie_api.js" type="text/javascript"></script>
+    <script src="./libs/lottie.js" type="text/javascript"></script>
+    <script src="./libs/lottie_api.js" type="text/javascript"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Roboto:300,400,700" rel="stylesheet">
     <link href="./style.css" type="text/css" rel="stylesheet">
     <title>Lottie-Simple</title>
 </head>
